mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql
spec:
  ports:
    - port: 3306
  selector:
    app: wordpress-database
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-mysql
  labels:
    app: wordpress-database
spec:
  selector:
    matchLabels:
      app: wordpress-database

  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress-database
    spec:
      containers:
        - image: mysql
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-vc
      volumes:
        - name: mysql-vc
          persistentVolumeClaim:
            claimName: mysql-vc
          # This AWS EBS volume must already exist.
          # awsElasticBlockStore:
          # volumeID: "vol-0a07279134ff942de"
          # fsType: ext4
