wordpress.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: wordpress-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  labels:
    app: wordpress-app
spec:
  selector:
    matchLabels:
      app: wordpress-app
  template:
    metadata:
      labels:
        app: wordpress-app
    spec:
      containers:
        - image: wordpress:5.6
          name: wordpress
          volumeMounts:
            - mountPath: /var/www/html
              name: wordpress-vc
      volumes:
        - name: wordpress-vc
          persistentVolumeClaim:
            claimName: wordpress-vc
          
          ##    This AWS EBS volume must already exist.
          #     awsElasticBlockStore:
          #       volumeID: "vol-0a07279134ff942de"
          #       fsType: ext4
