ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace:  default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "*.com"
    http:
      paths:
      - pathType: Prefix
        path: "/flask"
        backend:
          service:
            name: flask-service
            port: 
              number: 80
              
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wordpress-service
            port: 
              number: 80
